# neural-network

./: .gitignore  README.md  neural_network.py  pyproject.toml
demos/: adult_martital_status.ipynb  demo.py  housing_price.ipynb  housing_price_regression.py  make_moons.ipynb  make_moons.py  wine.ipynb  wine.py
neural_network.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nn/: __init__.py  demo.py  functions.py  initialization.py  layers.py  loss_functions.py  metrics.py  neural_network.py  optimizer.py  utils.py
tests/: debug.py  mini_test.py  test_initialization.py  test_integration.py  test_layers.py  test_loss_functions.py  test_metrics.py  test_optimizer.py  test_utils.py
